--- a/index.html
+++ b/index.html
@@ -15,48 +15,54 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" />
 </head>
 
-<body>
-  <div class="overflow-hidden">
-    <div class="bg__gray-2 position-relative">
-      <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3" data-aos="fade-down"
-        data-aos-duration="1000" ddata-aos-delay="300">
-        <div class="container position-relative">
-          <a class="navbar-brand" href="#">
-            <img src="./assets/images/LOGO.svg" alt="" />
-          </a>
-          <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
-            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-            aria-label="Toggle navigation">
-            <span></span>
-            <span></span>
-            <span></span>
-          </button>
+<div class="overflow-hidden">
+  <div class="bg__gray-2 position-relative">
+      <nav class="navbar navbar-expand-lg wrapper__navbar position-relative z-3 sticky-top" data-aos="fade-down"
+      data-aos-duration="1000" ddata-aos-delay="300">
+      <div class="container position-relative">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/images/LOGO.svg" alt="" />
+        </a>
+        <button class="navbar-toggler nav__button position-relative" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
 
-          <div class="collapse navbar-collapse wrapper__navbar-menu center" id="navbarSupportedContent">
-            <ul class="navbar-nav menu__center">
+        <div class="collapse navbar-collapse wrapper__navbar-menu center " id="navbarSupportedContent">
+          <ul class="navbar-nav menu__center">
 
-              <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
-                  href="index.html">
-                  home
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
-                  about me
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="project.html">
-                  projects
-                </a>
-              </li>
-            </ul>
-          </div>
-
-
+            <li class="nav-item">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 active"
+                href="index.html">
+                home
+              </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1" href="#about">
+                about me
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link bold font__size--12 text__12-md text-uppercase color__gray-1 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Portfolio Projects
+              </a>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html">All</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#hardware-projects">Hardware</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#digital-projects">Digital</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href="projects.html#fullstack-projects">Fullstack</a>
+                <a class="dropdown-item bold font__size--12 text__12-md color__gray-1" href= "">Design (Coming soon)</a>
+              </div>
+            </li>
+          </ul>
         </div>
-      </nav>
+
+
+      </div>
+    </nav>
 
       <section class="position-relative pt-4 pb-3">
         <div class="container position-relative z-2">
@@ -155,7 +161,9 @@
               <p class="medium font__size--12 text__12-md color__gray-1">
                 Full life cycle management of Networking devices, Mobile, Phone and tablets.
               </p>
-              <p class="coming-soon">Coming Soon</p>
+              <a href="projects.html#hardware-projects" class="no-color-change">
+                <p class="coming-soon">Find out more</p>
+              </a>
             </div>
           </div>
 
@@ -174,7 +182,7 @@
               <p class="medium font__size--12 text__12-md color__gray-1">
                 Ideation, Strategy Development, and Delivery at Early-Stage Startups. Leveraging Agile Principles
               </p>
-              <a href="project.html#digital-projects" class="no-color-change">
+              <a href="projects.html#digital-projects" class="no-color-change">
                 <p class="coming-soon">Find out more</p>
               </a>
             </div>
@@ -205,7 +213,9 @@
               <p class="medium font__size--12 text__12-md color__gray-1">
                 Hands on Experience with HTML, CSS, JavaScript, Bootstrap..
               </p>
-              <p class="coming-soon">Coming Soon</p>
+              <a href="projects.html#fullstack-projects" class="no-color-change">
+                <p class="coming-soon">Find out more</p>
+              </a>
             </div>
           </div>
           <div class="col-sm-6 col-lg-3 mb-4 mb-sm-0">
